[gd_scene load_steps=6 format=3 uid="uid://cy1f6s5878jps"]

[ext_resource type="PackedScene" uid="uid://0khn4xmn7hu7" path="res://Assets/JunkDrawer/Models/test_ship/TestShip.glb" id="1_hkkm6"]
[ext_resource type="Script" uid="uid://dh3sqpycsp36q" path="res://Scenes/Game/Ship/test_ship.gd" id="1_trx1f"]
[ext_resource type="PackedScene" uid="uid://cfnthe70ojwtb" path="res://Scenes/Game/Ship/ThrustParticles.tscn" id="3_pw2eq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pw2eq"]
size = Vector3(0.9, 0.09, 0.6)

[sub_resource type="SphereShape3D" id="SphereShape3D_pickup"]
radius = 4.0

[node name="TestShip" type="RigidBody3D"]
physics_interpolation_mode = 1
input_ray_pickable = false
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
mass = 100.0
continuous_cd = true
linear_damp = 0.1
angular_damp = 1.0
script = ExtResource("1_trx1f")
thrust_main = 2000.0
thrust_left = 40000.0
thrust_right = 40000.0

[node name="TestShip" parent="." instance=ExtResource("1_hkkm6")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="ShipHullCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(3.3, 0, 0, 0, 3.3, 0, 0, 0, 3.3, -0.0019134507, 0.5556628, 0)
shape = SubResource("BoxShape3D_pw2eq")
debug_color = Color(0, 0.6, 0.69803923, 0.7882353)

[node name="ShipLandingCollision" type="CollisionShape3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(3.3, 0, 0, 0, 3.3, 0, 0, 0, 3.3, 0, -1.05, 0)
shape = SubResource("BoxShape3D_pw2eq")
debug_color = Color(0, 0.6, 0.69803923, 0.7882353)

[node name="PickupArea" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupArea"]
visible = false
shape = SubResource("SphereShape3D_pickup")

[node name="ThrustParticles_left" parent="." instance=ExtResource("3_pw2eq")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35, -0.18041241, 0)
amount = 16

[node name="ThrustParticles_right" parent="." instance=ExtResource("3_pw2eq")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.35, -0.18041241, 0)
amount = 16

[node name="ThrustLight_left" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35, -0.5, 16)
light_color = Color(0.3770652, 0.8222176, 0.9905457, 1)
light_energy = 16.0
spot_range = 32.0
spot_angle = 12.0
spot_angle_attenuation = 3.4822028

[node name="ThrustLight_right" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.35, -0.5, 16)
light_color = Color(0.3770652, 0.8222176, 0.9905457, 1)
light_energy = 16.0
spot_range = 32.0
spot_angle = 12.0
spot_angle_attenuation = 3.4822028
